# FireStarter

./: .gitignore  .python-version  Building Fire Starter.txt  Fire-Starter.code-workspace  Fire-Starter_au.cfg  FireStarter_au.cfg  FromTheTop.md  Makefile  Pipfile  pyproject.toml
doc/: Enhancing_existing_projects.md  Starting_new_projects.md
docs/: Building_Fire_Starter.txt  Fire Starter System Guide.md  Fire Starter User's Guide.md  How to set up a perfect Python project.html
local/python/: auto_update.py
src/: run_shell_cmds.py
src/jasmit_firestarter.egg-info/: PKG-INFO  SOURCES.txt
src/local/cfg/: Fire-Starter_au.cfg
src/local/python/: auto_update.py  fire-starter.py
