[project]
name = "jasmit_firestarter"
version = "0.1.6"
description = "Tools often used when starting a new project"
readme = "README.md"
authors = [
    { name = "jasmit", email = "js8335@swbell.net" }
]
requires-python = ">=3.12,<3.13"
dependencies = []
license = { text = "MIT" }

[project.scripts]
jasmit_firestarter = "firestarter:__main__"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.uv.sources.jasmit_firestarter]
path = "src/firestarter"

